# trash

./: .gitmodules  meson.build  rev.cc
.github/workflows/: tests.yml
tests/: first.cc
